--- a/src/main/res/layout/estudiante_detalle.xml
+++ b/src/main/res/layout/estudiante_detalle.xml
@@ -6,38 +6,70 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:id="@+id/ivPhotoDetalle"/>
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvNombreDetalle"
-            android:textSize="25dp"
-            android:layout_marginTop="15dp"/>
+            android:layout_height="match_parent"
+            android:layout_margin="16dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvMatriculaDetalle"
-            android:textSize="25dp"
-            android:layout_marginTop="15dp"/>
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/ivPhotoDetalle"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvCorreoDetalle"
-            android:textSize="25dp"
-            android:layout_marginTop="15dp"/>
-        
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/nombre"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:layout_marginTop="15dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvNombreDetalle"
+                android:textSize="25dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/matricula"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:layout_marginTop="15dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvMatriculaDetalle"
+                android:textSize="25dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/correo"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:layout_marginTop="15dp"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvCorreoDetalle"
+                android:textSize="25dp"/>
+
+            <Button
+                android:layout_marginTop="20dp"
+                android:layout_width="200dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:id="@+id/bt_grabar"
+                android:onClick="onClick"
+                android:text="@string/guardar"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
